--- a/perlin_noise/index.html
+++ b/perlin_noise/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <script src="../p5/p5.min.js"></script>
+    <script src="index.js"></script>
+    <title>Perlin Noise</title>
 </head>
 <body>
     
